ch_18_pmatching - refeed 6 @bindings

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
@@ -147,7 +147,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -253,7 +257,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -328,7 +336,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -442,7 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -505,7 +521,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -574,7 +594,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -628,7 +652,11 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -776,7 +804,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -899,7 +931,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -953,7 +989,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1073,7 +1113,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1134,7 +1178,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1260,7 +1308,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1353,7 +1405,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1387,7 +1443,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1445,7 +1505,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1529,7 +1593,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1605,7 +1673,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1691,7 +1763,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1804,7 +1880,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1912,7 +1992,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1975,7 +2059,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2059,7 +2147,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2142,7 +2234,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2215,7 +2311,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2264,7 +2364,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2333,7 +2437,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2402,7 +2510,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2467,7 +2579,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2526,7 +2642,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -2628,7 +2748,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2723,7 +2847,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2806,8 +2934,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2822,7 +2954,7 @@
        "()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,15 +2962,21 @@
    "source": [
     "{\n",
     "\n",
-    "    let x = 6;\n",
+    "    let x = 4;\n",
     "    let y = false;\n",
     "\n",
-    "    // @audit : Explain what is happening here\n",
+    "    // @audit-ok : Explain what is happening here\n",
     "    // ANSWER :\n",
     "    // The precedence of the match guard is :\n",
     "    // - (4 | 5 | 6) if y // this\n",
     "    // - 4 | 5 | (6 if y) // NOT this\n",
     "    // else if 6 would have printed 'yes' instead of 'no'\n",
+    "    // @audit-ok BUT y = false ... will make it always print 'no'??? WTF???\n",
+    "    // ANSWER :\n",
+    "    // Ah, I see, the match guard is not a condition, it is a pattern\n",
+    "    // so it is not evaluated as a boolean, but as a pattern\n",
+    "    // - the y is a pattern that ARE NOT siloed to just 4 | 5 | (6 if y) ...\n",
+    "    // Match Pattern is DIFFERENT from EVALUATING BOOLEANS\n",
     "    match x {\n",
     "        4 | 5 | 6 if y => println!(\"yes\"),\n",
     "        _ => println!(\"no\"),\n",
@@ -2852,6 +2990,8 @@
    "metadata": {},
    "source": [
     "> Listing 18-28: Combining multiple patterns with a match guard\n",
+    "\n",
+    "#### -- Combining Multiple Patterns with a Match Guard --\n",
     "\n",
     "The match condition states that the arm only matches :  \n",
     "\n",
@@ -2873,6 +3013,8 @@
     "\n",
     "- the `if` condition applies to the whole pattern `4 | 5 | 6`,  \n",
     "- not only to the last value `6`. \n",
+    "\n",
+    "#### -- Match Pattern is DIFFERENT from EVALUATING BOOLEANS --\n",
     "\n",
     "In other words, the precedence of a match guard in relation to a pattern  \n",
     "behaves like this:\n",
@@ -2900,18 +3042,31 @@
    "source": [
     "### @ Bindings\n",
     "\n",
-    "The at operator @ lets us create a variable that holds a value at the same time  \n",
-    "as we’re testing that value for a pattern match. In Listing 18-29, we want to  \n",
-    "test that a Message::Hello id field is within the range 3..=7. We also want to  \n",
-    "bind the value to the variable id_variable so we can use it in the code  \n",
-    "associated with the arm. We could name this variable id, the same as the field,  \n",
-    "but for this example we’ll use a different name."
+    "The `at` operator `@` lets us :  \n",
+    "\n",
+    "- create a variable \n",
+    "- that holds a value  \n",
+    "- at the same time  \n",
+    "- as we’re testing that value for a pattern match.  \n",
+    "\n",
+    "In Listing 18-29, we want to test that :  \n",
+    "\n",
+    "- a `Message::Hello` id field is within the range `3..=7` \n",
+    "- We also want to `bind` the value to the variable `id_variable`  \n",
+    "- so we can use it in the code associated with the arm. \n",
+    "\n",
+    "We could name this variable `id`, the same as the field, but for this example  \n",
+    "we’ll use a different name `id_variable`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2940,12 +3095,28 @@
     "    let msg = Message::Hello { id: 5 };\n",
     "\n",
     "    match msg {\n",
+    "        // The 'id' value matchs this arm\n",
+    "        // We are binding the 'id' value to the 'id_variable' variable\n",
+    "        // - this silmutaneously creates 'id_variable' \n",
+    "        // - and assigns it the value of 'id'\n",
+    "        // - so we can use it in the println! macro\n",
+    "        // - outside the arm\n",
     "        Message::Hello {\n",
     "            id : id_variable @ 3..=7,\n",
     "        } => println!(\"Found an id in range: {}\", id_variable),\n",
+    "        // We only have a range specified and did NOT bind the value\n",
+    "        // - so we don't have access to the value\n",
+    "        // - the value could be 10, 11, or 12 ... we did NOT bind it\n",
+    "        // - so we don't know what it is to print\n",
     "        Message::Hello { id: 10..=12 } => {\n",
     "            println!(\"Found an id in another range\")\n",
     "        }\n",
+    "        // We do have the 'id' value available because we've used the\n",
+    "        // struct field shorthand syntax\n",
+    "        // @audit-ok : Explain the struct field shorthand syntax\n",
+    "        // ANSWER :\n",
+    "        // In this match arm, the struct field shorthand { id } is shorthand  \n",
+    "        // for { id: id }.\n",
     "        Message::Hello { id } => println!(\"Found some other id: {}\", id),\n",
     "    }\n",
     "\n",
@@ -2958,26 +3129,37 @@
    "source": [
     "> Listing 18-29: Using @ to bind to a value in a pattern while also testing it\n",
     "\n",
-    "This example will print Found an id in range: 5.  \n",
+    "This example will `print Found an id in range: 5`.  \n",
     "\n",
-    "By specifying id_variable @ before the range 3..=7, we’re capturing whatever  \n",
-    "value matched the range while also testing that the value matched the range  \n",
-    "pattern.\n",
+    "By specifying 'id_variable' `@` before the range `3..=7`, we’re : \n",
     "\n",
-    "In the second arm, where we only have a range specified in the pattern, the  \n",
-    "code associated with the arm doesn’t have a variable that contains the actual  \n",
-    "value of the id field. The id field’s value could have been 10, 11, or 12, but  \n",
-    "the code that goes with that pattern doesn’t know which it is. The pattern code  \n",
-    "isn’t able to use the value from the id field, because we haven’t saved the id  \n",
-    "value in a variable.\n",
+    "- capturing whatever value matched the range  \n",
+    "- while also testing that the value matched the range pattern.\n",
     "\n",
-    "In the last arm, where we’ve specified a variable without a range, we do have  \n",
-    "the value available to use in the arm’s code in a variable named id. The reason  \n",
-    "is that we’ve used the struct field shorthand syntax. But we haven’t applied  \n",
-    "any test to the value in the id field in this arm, as we did with the first  \n",
-    "two arms: any value would match this pattern.\n",
+    "In the second arm, where we only have a range specified in the pattern : \n",
     "\n",
-    "Using @ lets us test a value and save it in a variable within one pattern."
+    "- the code associated with the arm  \n",
+    "- doesn’t have a variable that contains the actual value of the id field.  \n",
+    "- The id field’s value could have been 10, 11, or 12, but the code that goes  \n",
+    "with that pattern doesn’t know which it is. \n",
+    "- The pattern code isn’t able to use the `value` from the id field, because we  \n",
+    "haven’t saved the `id value` in a variable.\n",
+    "\n",
+    "In the last arm, where we’ve specified a variable without a range :  \n",
+    "\n",
+    "- we do have the value available to use in the arm’s code in a variable named  \n",
+    "'id'. \n",
+    "- The reason is that we’ve used the struct field shorthand syntax.  \n",
+    "- But we haven’t applied any test to the value in the id field in this arm, as  \n",
+    "we did with the first two arms: any value would match this pattern.\n",
+    "\n",
+    "#### -- Using `@` Allows Test a value AND Save it in a var w/ONE PATTERN --\n",
+    "\n",
+    "Using `@` lets us : \n",
+    "\n",
+    "- test a value  \n",
+    "- and save it in a variable  \n",
+    "- within one pattern."
    ]
   },
   {
@@ -3009,7 +3191,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
