--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -158,13 +158,15 @@
     "compiler ensures references are always valid. \n",
     "\n",
     "Unsafe Rust has two new types called : \n",
-    "- raw pointers that are similar to references.  \n",
+    "- `raw pointers` that are similar to `references`.  \n",
     "\n",
-    "As with references, raw pointers can be immutable or mutable and are written  \n",
-    "as :  \n",
+    "#### -- UNSAFE TYPES : `*const` and `*mut` --\n",
     "\n",
-    "- `*const T`  \n",
-    "- and `*mut T`,  \n",
+    "As with references, raw pointers can be `immutable` or `mutable` and are  \n",
+    "written as :  \n",
+    "\n",
+    "- **` *const `** `T`  \n",
+    "- **` *mut `** `T`,  \n",
     "\n",
     "respectively. \n",
     "\n",
@@ -185,12 +187,14 @@
     "- Are `allowed to be null`\n",
     "- `Don’t` implement any `automatic cleanup`\n",
     "\n",
+    "#### -- Raw Pointers TradeOff : Perf and Hardware direct vs Memory Safety --\n",
+    "\n",
     "By opting out of having Rust enforce these guarantees : \n",
     "\n",
     "- you can give up guaranteed safety  \n",
-    "- in exchange for greater performance  \n",
-    "- or the ability to interface with another language or hardware where Rust’s  \n",
-    "guarantees don’t apply.\n",
+    "- in exchange for **`greater performance`**  \n",
+    "- or the ability to interface with another language or **`hardware`** where  \n",
+    "Rust’s guarantees don’t apply.\n",
     "\n",
     "> Listing 19-1 shows how to create an immutable and a mutable raw pointer  \n",
     "from references."
@@ -199,7 +203,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -229,28 +237,49 @@
    "source": [
     "> Listing 19-1: Creating raw pointers from references\n",
     "\n",
-    "Notice that we don’t include the unsafe keyword in this code. We can create raw  \n",
-    "pointers in safe code; we just can’t dereference raw pointers outside an unsafe  \n",
-    "block, as you’ll see in a bit.\n",
+    "#### -- Raw Pointers : MUST be DEREFERENCED in UNSAFE CODE --\n",
     "\n",
-    "We’ve created raw pointers by using as to cast an immutable and a mutable  \n",
-    "reference into their corresponding raw pointer types. Because we created them  \n",
-    "directly from references guaranteed to be valid, we know these particular raw  \n",
-    "pointers are valid, but we can’t make that assumption about just any raw pointer.\n",
+    "Notice that we don’t include the `unsafe` keyword in this code :  \n",
+    "- We can create `raw pointers` in `safe code`;  \n",
+    "- we just can’t `dereference` raw pointers `outside an unsafe` block, as you’ll  \n",
+    "see in a bit.\n",
+    "\n",
+    "We’ve created raw pointers by :  \n",
+    "\n",
+    "- using `as` to `cast` an immutable and a mutable reference  \n",
+    "- into their corresponding raw pointer types.  \n",
+    "\n",
+    "#### -- Raw Pointers : ok to CREATE in SAFE CODE --\n",
+    "\n",
+    "Because we created them directly from references guaranteed to be valid :  \n",
+    "\n",
+    "- we know these particular raw pointers are valid,  \n",
+    "- but we can’t make that assumption about just any raw pointer.\n",
     "\n",
     "To demonstrate this, next we’ll create a raw pointer whose validity we can’t be  \n",
-    "so certain of. Listing 19-2 shows how to create a raw pointer to an arbitrary  \n",
-    "location in memory. Trying to use arbitrary memory is undefined: there might be  \n",
-    "data at that address or there might not, the compiler might optimize the code  \n",
-    "so there is no memory access, or the program might error with a segmentation  \n",
-    "fault. Usually, there is no good reason to write code like this, but it is  \n",
-    "possible."
+    "so certain of.  \n",
+    "\n",
+    "#### -- EXAMPLE of Raw Pointer created in ARBITRARY memory location --\n",
+    "\n",
+    "> Listing 19-2 shows how to create a raw pointer to an arbitrary location in  \n",
+    "memory.  \n",
+    "\n",
+    "Trying to use arbitrary memory is undefined:  \n",
+    "- there might be data at that address or there might not,  \n",
+    "- the compiler might optimize the code so there is no memory access,  \n",
+    "- or the program might error with a segmentation fault.  \n",
+    "\n",
+    "Usually, there is no good reason to write code like this, but it is possible."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -258,13 +287,18 @@
        "()"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{\n",
+    "{   // Usually there is NO GOOD reason to write code like this.. but is possible\n",
+    "    \n",
+    "    // Trying to use abitrary memory is UNDEFINED\n",
+    "    // - there might be data at that address or not\n",
+    "    // - compiler may have optimized out the data, no memory access\n",
+    "    // - or program might error with segmentation fault\n",
     "    let address = 0x012345usize;\n",
     "    let r = address as *const i32; \n",
     "}"
@@ -276,15 +310,25 @@
    "source": [
     "> Listing 19-2: Creating a raw pointer to an arbitrary memory address\n",
     "\n",
-    "Recall that we can create raw pointers in safe code, but we can’t dereference  \n",
-    "raw pointers and read the data being pointed to. In Listing 19-3, we use the  \n",
-    "dereference operator * on a raw pointer that requires an unsafe block."
+    "#### -- EXAMPLE : Dereference Raw Pointer with UNSAFE Block --\n",
+    "\n",
+    "Recall that : \n",
+    "\n",
+    "- we can create raw pointers in safe code,  \n",
+    "- but we can’t dereference raw pointers and read the data being pointed to. \n",
+    "\n",
+    "> In Listing 19-3, we use the dereference operator * on a raw pointer that  \n",
+    "requires an unsafe block."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -309,11 +353,19 @@
     "{\n",
     "    let mut num = 5;\n",
     "\n",
+    "    // Creating a pointer does no harm @audit-ok : why???\n",
+    "    // ANSWER :\n",
+    "    // Because we're sourcing the pointer from a Rust reference, which is\n",
+    "    // guaranteed to point to a valid value\n",
+    "    // NOTE : with raw pointers, we are able to point to the SAME memory address\n",
+    "    // &num\n",
+    "    // - with references, Rust borrow rule would prevent us from having a\n",
+    "    //  mutable reference AND an immutable reference in the same scope\n",
     "    let r1 = &num as *const i32;\n",
     "    let r2 = &mut num as *mut i32;\n",
     "\n",
+    "    // To DEREFERENCE a raw pointer, we MUST us an `unsafe` block\n",
     "    unsafe {\n",
-    "        // Creating a pointer does no harm @audit : why???\n",
     "        // It's only when we try to access the value that it points at that we\n",
     "        // might end up dealing with an invalid value\n",
     "        println!(\"r1 is {}\", *r1);\n",
@@ -328,24 +380,41 @@
    "source": [
     "> Listing 19-3: Dereferencing raw pointers within an unsafe block\n",
     "\n",
-    "Creating a pointer does no harm; it’s only when we try to access the value that  \n",
-    "it points at that we might end up dealing with an invalid value.\n",
+    "Creating a pointer does no harm;  \n",
+    "- it’s only when we try to access the value  \n",
+    "- that it points at that we might end up dealing with an invalid value.\n",
     "\n",
-    "Note also that in Listing 19-1 and 19-3, we created *const i32 and *mut i32 raw  \n",
-    "pointers that both pointed to the same memory location, where num is stored. If  \n",
-    "we instead tried to create an immutable and a mutable reference to num, the code  \n",
-    "would not have compiled because Rust’s ownership rules don’t allow a mutable  \n",
-    "reference at the same time as any immutable references. With raw pointers, we  \n",
-    "can create a mutable pointer and an immutable pointer to the same location and  \n",
-    "change data through the mutable pointer, potentially creating a data race.  \n",
+    "Note also that in Listing 19-1 and 19-3, we created :  \n",
+    "- `*const i32` and \n",
+    "- `*mut i32` \n",
+    "- raw pointers that both pointed to the same memory location, \n",
+    "- where num is stored.  \n",
+    "\n",
+    "If we instead tried to create an `immutable` and a `mutable` reference to num, \n",
+    "the code would not have compiled because Rust’s ownership rules :  \n",
+    "- don’t allow a `mutable` reference  \n",
+    "- at the same time as any `immutable` references.  \n",
+    "\n",
+    "#### -- Raw Pointers can point to SAME ADDRESS, References can NOT --\n",
+    "\n",
+    "With raw pointers, we can create :  \n",
+    "\n",
+    "- a mutable pointer  \n",
+    "- and an immutable pointer to the same location \n",
+    "- and change data through the mutable pointer,  \n",
+    "- **potentially creating a data race**.  \n",
+    "\n",
     "Be careful!\n",
     "\n",
-    "With all of these dangers, why would you ever use raw pointers? One major use  \n",
-    "case is when interfacing with C code, as you’ll see in the next section,  \n",
-    "“Calling an Unsafe Function or Method.” Another case is when building up safe  \n",
-    "abstractions that the borrow checker doesn’t understand. We’ll introduce unsafe  \n",
-    "functions and then look at an example of a safe abstraction that uses unsafe  \n",
-    "code."
+    "With all of these dangers, why would you ever use raw pointers?  \n",
+    "\n",
+    "- One major use case is when interfacing with C code, as you’ll see in the next  \n",
+    "section, “Calling an Unsafe Function or Method.”  \n",
+    "- Another case is when building up safe abstractions that the borrow checker  \n",
+    "doesn’t understand.  \n",
+    "\n",
+    "We’ll introduce unsafe functions and then look at an example of a safe  \n",
+    "abstraction that uses unsafe code."
    ]
   },
   {
@@ -370,7 +439,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -445,7 +518,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -486,7 +563,11 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -588,7 +669,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "// import slice module from standard library\n",
@@ -672,7 +757,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -781,7 +870,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -866,7 +959,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -895,7 +992,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -952,7 +1053,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1033,7 +1138,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1146,7 +1255,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub trait Iterator {\n",
@@ -1180,7 +1293,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "struct Counter {}\n",
@@ -1208,7 +1325,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1297,7 +1418,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1390,7 +1515,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::ops::Add;\n",
@@ -1466,7 +1595,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "trait Pilot {\n",
@@ -1514,7 +1647,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1561,7 +1698,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1634,7 +1775,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1714,7 +1859,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1780,7 +1929,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1886,7 +2039,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::fmt;\n",
@@ -1943,7 +2100,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "struct Point {\n",
@@ -1990,7 +2151,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::fmt;\n",
@@ -2008,7 +2173,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2050,7 +2219,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
