ch_19_unsafe mm rev 1

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -101,11 +101,11 @@
     "You can take five actions in unsafe Rust that you can’t in safe Rust, which we  \n",
     "call unsafe superpowers. Those superpowers include the ability to:\n",
     "\n",
-    "- **`Dereference`** a raw pointer\n",
+    "- **`Dereference`** a **raw** pointer\n",
     "- Call an **`unsafe function or method`**\n",
-    "- Access or **`modify a mutable static`** variable\n",
+    "- Access or modify a **`mutable static`** variable\n",
     "- Implement an **`unsafe trait`**\n",
-    "- Access **`fields of `union`s`**\n",
+    "- Access **`fields of unions`**\n",
     "\n",
     "It’s important to understand that unsafe :  \n",
     "\n",
