ch_19_adv_features : rev 6 Never Type

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -2636,6 +2636,232 @@
     "another Result<T, E>, which means we can use any methods that work on  \n",
     "Result<T, E> with it, as well as special syntax like the ? operator."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Never Type that Never Returns\n",
+    "\n",
+    "Rust has a special type named ! that’s known in type theory lingo as the empty  \n",
+    "type because it has no values. We prefer to call it the never type because it  \n",
+    "stands in the place of the return type when a function will never return.  \n",
+    "Here is an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "mismatched types",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0308] Error:\u001b[0m mismatched types",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_54:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m1 │\u001b[0m \u001b[38;5;249mf\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;100mb\u001b[0m\u001b[38;5;100ma\u001b[0m\u001b[38;5;100mr\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m-\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54m!\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m    \u001b[38;5;100m─\u001b[0m\u001b[38;5;100m┬\u001b[0m\u001b[38;5;100m─\u001b[0m      \u001b[38;5;54m┬\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m     \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m implicitly returns `()` as its body has no tail or `return` expression",
+      " \u001b[38;5;246m  ·\u001b[0m             \u001b[38;5;54m│\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m             \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m expected `!`, found `()`",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "fn bar() -> ! {\n",
+    "    // --snip--\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code is read as “the function bar returns never.” Functions that return  \n",
+    "never are called diverging functions. We can’t create values of the type ! so  \n",
+    "bar can never possibly return.\n",
+    "\n",
+    "But what use is a type you can never create values for? Recall the code from  \n",
+    "Listing 2-5, part of the number guessing game; we’ve reproduced a bit of it  \n",
+    "here in Listing 19-26."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "`continue` outside of a loop",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0268] Error:\u001b[0m `continue` outside of a loop",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_57:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m5 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mE\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m=\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mc\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mi\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54mu\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;249m,\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m               \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m                   \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m cannot `continue` outside of a loop",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "let guess = String::from(\"3\");\n",
+    "\n",
+    "let guess: u32 = match guess.trim().parse() {\n",
+    "    Ok(num) => num,\n",
+    "    Err(_) => continue,\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-26: A match with an arm that ends in continue\n",
+    "\n",
+    "At the time, we skipped over some details in this code. In Chapter 6 in  \n",
+    "“The match Control Flow Operator” section, we discussed that match arms must  \n",
+    "all return the same type. So, for example, the following code doesn’t work:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "`match` arms have incompatible types",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0308] Error:\u001b[0m `match` arms have incompatible types",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_59:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m3 │\u001b[0m \u001b[38;5;68m╭\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m▶\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mg\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m=\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;68mm\u001b[0m\u001b[38;5;68ma\u001b[0m\u001b[38;5;68mt\u001b[0m\u001b[38;5;68mc\u001b[0m\u001b[38;5;68mh\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68mg\u001b[0m\u001b[38;5;68mu\u001b[0m\u001b[38;5;68me\u001b[0m\u001b[38;5;68ms\u001b[0m\u001b[38;5;68ms\u001b[0m\u001b[38;5;68m.\u001b[0m\u001b[38;5;68mt\u001b[0m\u001b[38;5;68mr\u001b[0m\u001b[38;5;68mi\u001b[0m\u001b[38;5;68mm\u001b[0m\u001b[38;5;68m(\u001b[0m\u001b[38;5;68m)\u001b[0m\u001b[38;5;68m.\u001b[0m\u001b[38;5;68mp\u001b[0m\u001b[38;5;68ma\u001b[0m\u001b[38;5;68mr\u001b[0m\u001b[38;5;68ms\u001b[0m\u001b[38;5;68me\u001b[0m\u001b[38;5;68m(\u001b[0m\u001b[38;5;68m)\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m{\u001b[0m",
+      " \u001b[38;5;246m4 │\u001b[0m \u001b[38;5;68m│\u001b[0m   \u001b[38;5;68m \u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68mO\u001b[0m\u001b[38;5;68mk\u001b[0m\u001b[38;5;68m(\u001b[0m\u001b[38;5;68m_\u001b[0m\u001b[38;5;68m)\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m=\u001b[0m\u001b[38;5;68m>\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;100m5\u001b[0m\u001b[38;5;68m,\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;68m│\u001b[0m                \u001b[38;5;100m┬\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;68m│\u001b[0m                \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m this is found to be of type `{integer}`",
+      " \u001b[38;5;246m5 │\u001b[0m \u001b[38;5;68m│\u001b[0m   \u001b[38;5;68m \u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68mE\u001b[0m\u001b[38;5;68mr\u001b[0m\u001b[38;5;68mr\u001b[0m\u001b[38;5;68m(\u001b[0m\u001b[38;5;68m_\u001b[0m\u001b[38;5;68m)\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m=\u001b[0m\u001b[38;5;68m>\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;54m\"\u001b[0m\u001b[38;5;54mh\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54ml\u001b[0m\u001b[38;5;54ml\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54m\"\u001b[0m\u001b[38;5;68m,\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;68m│\u001b[0m                 \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;68m│\u001b[0m                    \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m expected integer, found `&str`",
+      " \u001b[38;5;246m6 │\u001b[0m \u001b[38;5;68m├\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m▶\u001b[0m\u001b[38;5;68m \u001b[0m\u001b[38;5;68m}\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;68m│\u001b[0m        ",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;68m╰\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m `match` arms have incompatible types",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "let guess = String::from(\"5\");\n",
+    "\n",
+    "let guess = match guess.trim().parse() {\n",
+    "    Ok(_) => 5,\n",
+    "    Err(_) => \"hello\",\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The type of guess in this code would have to be an integer and a string, and  \n",
+    "Rust requires that guess have only one type. So what does continue return? How  \n",
+    "were we allowed to return a u32 from one arm and have another arm that ends  \n",
+    "with continue in Listing 19-26?\n",
+    "\n",
+    "As you might have guessed, continue has a ! value. That is, when Rust computes  \n",
+    "the type of guess, it looks at both match arms, the former with a value of u32  \n",
+    "and the latter with a ! value. Because ! can never have a value, Rust decides  \n",
+    "that the type of guess is u32.\n",
+    "\n",
+    "The formal way of describing this behavior is that expressions of type ! can  \n",
+    "be coerced into any other type. We’re allowed to end this match arm with  \n",
+    "continue because continue doesn’t return a value; instead, it moves control  \n",
+    "back to the top of the loop, so in the Err case, we never assign a value to  \n",
+    "guess.\n",
+    "\n",
+    "The never type is useful with the panic! macro as well. Recall the unwrap  \n",
+    "function that we call on Option<T> values to produce a value or panic with this  \n",
+    "definition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "cannot define inherent `impl` for a type outside of the crate where the type is defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0116] Error:\u001b[0m cannot define inherent `impl` for a type outside of the crate where the type is defined",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_60:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m1 │\u001b[0m \u001b[38;5;54mi\u001b[0m\u001b[38;5;54mm\u001b[0m\u001b[38;5;54mp\u001b[0m\u001b[38;5;54ml\u001b[0m\u001b[38;5;54m<\u001b[0m\u001b[38;5;54mT\u001b[0m\u001b[38;5;54m>\u001b[0m\u001b[38;5;54m \u001b[0m\u001b[38;5;54mO\u001b[0m\u001b[38;5;54mp\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mi\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54m<\u001b[0m\u001b[38;5;54mT\u001b[0m\u001b[38;5;54m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m         \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m impl for type defined outside of crate.",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "impl<T> Option<T> {\n",
+    "    pub fn unwrap(self) -> T {\n",
+    "        match self {\n",
+    "            Some(val) => val,\n",
+    "            None => panic!(\"called `Option::unwrap()` on a `None` value\"),\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this code, the same thing happens as in the match in Listing 19-26: Rust  \n",
+    "sees that val has the type T and panic! has the type !, so the result of the  \n",
+    "overall match expression is T. This code works because panic! doesn’t produce a  \n",
+    "value; it ends the program. In the None case, we won’t be returning a value  \n",
+    "from unwrap, so this code is valid.\n",
+    "\n",
+    "One final expression that has the type ! is a loop:\n",
+    "\n",
+    "```rust\n",
+    "    print!(\"forever \");\n",
+    "\n",
+    "    loop {\n",
+    "        print!(\"and ever \");\n",
+    "    }\n",
+    "```\n",
+    "\n",
+    "Here, the loop never ends, so ! is the value of the expression. However, this  \n",
+    "wouldn’t be true if we included a break, because the loop would terminate when  \n",
+    "it got to the break."
+   ]
   }
  ],
  "metadata": {
